# qjazz

./: .dockerignore  .env-shell  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  HOW_TO_BUILD.md  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements  requirements.txt  swagger.sh
config/: build.mk  (+5 more)
python_modules/py-qgis-admin/: Makefile  README.md  cli.py  pyproject.toml  pyproject.toml.in  requirements.txt  setup.cfg  setup.py
python_modules/py-qgis-admin/py_qgis_admin/: api.py  backend.py  cli.py  client.py  config.py  errors.py  models.py  pool.py  resolver.py  resolvers.py  server.py  service.py  swagger.py
python_modules/py-qgis-admin/tests/: config.json  config.toml  conftest.py  pytest.ini  test_backend.py  test_client.py  test_pool.py
python_modules/py-qgis-cache/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt  setup.cfg
python_modules/py-qgis-cache/py_qgis_cache/: __init__.py  cachemanager.py  common.py  config.py  storage.py
python_modules/py-qgis-cache/tests/: conftest.py  s3_setup.py  test_cachemngr.py  test_storage.py
python_modules/py-qgis-contrib/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt  setup.cfg
python_modules/py-qgis-contrib/py_qgis_contrib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_modules/py-qgis-http/: Makefile  client.py  pyproject.toml  pyproject.toml.in  requirements.txt  setup.cfg
python_modules/py-qgis-metrics/: Makefile  pyproject.toml  pyproject.toml.in  setup.cfg
python_modules/py-qgis-project-cache/: Makefile  pyproject.toml  pyproject.toml.in  setup.cfg
python_modules/py-qgis-scripts/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt
python_modules/py-qgis-worker/: Makefile  README.md  pyproject.toml  pyproject.toml.in  requirements.txt  setup.cfg
python_modules/qjazz-contrib/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt
python_modules/qjazz-scripts/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt
python_modules/qjazz-server/: Makefile  pyproject.toml  pyproject.toml.in  requirements.txt
qjazz-contrib/: .gitignore  MANIFEST.in  Makefile  pyproject.toml  pyproject.toml.in  requirements.txt  setup.py
qjazz-contrib/qjazz_cache/: cachemanager.py  common.py  config.py  errors.py  prelude.py  routes.py  storage.py
qjazz-contrib/qjazz_ogc/: __init__.py  catalog.py  extent.py  layers.py  project.py
qjazz-contrib/tests/: certs  conftest.py  pytest.ini  s3_setup.py  test_cachemngr.py  test_config.py  test_dynamic_route.py  test_ogc.py  test_processing.py  test_storage.py  test_store.py
qjazz-metapackage/: Makefile  pyproject.toml
qjazz-pool/: Cargo.toml
qjazz-pool/src/: builder.rs  config.rs  errors.rs  lib.rs  messages.rs  pipes.rs  pool.rs  queue.rs  receiver.rs  rendezvous.rs  restore.rs  stats.rs  stream.rs  tests.rs  worker.rs
qjazz-pool/tests/: process.py
qjazz-processes/: .buildinfo  .gitignore  MANIFEST.in  Makefile  configuration.html  execution.html  genindex.html  index.html  intro.html  jobrealm.html  objects.inv  openapi.html  parameters.html  policies.html  processing.html  pyproject.toml  pyproject.toml.in  requirements.txt  search.html  searchindex.js  standards.html
qjazz-processes/.doctrees/: configuration.doctree  environment.pickle  execution.doctree  index.doctree  intro.doctree  jobrealm.doctree  openapi.doctree  parameters.doctree  policies.doctree  processing.doctree  standards.doctree
qjazz-processes/_sources/: configuration.rst.txt  intro.rst.txt  openapi.rst.txt  parameters.rst.txt  processing.rst.txt  standards.rst.txt
qjazz-processes/_static/: openapi.yml
qjazz-processes/doc/: Makefile  conf.py  configuration.rst  doc.manifest  execution.rst  index.rst  intro.rst  openapi.rst  policies.rst  processing.rst
qjazz-processes/docker/: docker-compose.yml
qjazz-processes/qjazz_printserver/: __main__.py  composers.py  context.py  file.py  getprint.py  jobs.py  models.py  parameters.py
qjazz-processes/qjazz_processes/: __main__.py  executor.py  executor_async.py  jobs.py
qjazz-processes/qjazz_processing/: __main__.py  jobs.py  processing.py
qjazz-processes/qjazz_wfsoutputserver/: __main__.py  archive.py  context.py  file.py  formats.py  jobs.py  models.py  request.py  wfsoutput.py
qjazz-processes/tests/: Makefile  config-processing.toml  config-server.toml  config-service.toml  conftest.py  docker-compose.yml  prelude-worker.py  prelude.py  pytest.ini  run-printserver.sh  run-server.sh  run-worker.sh  test_algorithms.py  test_callbacks.py  test_config.py  test_files_inputs.py  test_files_output.py  test_geojson_schemas.py  test_geometry_inputs.py  test_layer_inputs.py  test_literal_inputs.py  test_matrix_input.py  test_mesh_inputs.py  test_models.py  test_plugins.py  test_printserver.py  test_schema.py  test_server.py  test_wfsoutput.py  utils.py  worker-config.toml
qjazz-server/: .buildinfo  .gitignore  Cargo.toml  Makefile  README.md  genindex.html  http-routingtable.html  index.html  install.html  intro.html  management-api.html  management.html  managment-api.html  managment.html  objects.inv  rpc_cli.html  rpc_config.html  search.html  searchindex.js  server_config.html
qjazz-server/.doctrees/: environment.pickle  index.doctree  install.doctree  intro.doctree  management-api.doctree  management.doctree  managment-api.doctree  managment.doctree  rpc_cli.doctree  rpc_config.doctree  server_config.doctree
qjazz-server/_sources/: index.rst.txt  intro.rst.txt  management.rst.txt  managment.rst.txt  rpc_config.rst.txt  server_config.rst.txt
qjazz-server/python/: MANIFEST.in  Makefile  pyproject.toml  pyproject.toml.in  requirements.txt
qjazz-server/qjazz-map/: Cargo.toml  Makefile  build.rs  pyproject.toml
qjazz-server/qjazz-mon/: Cargo.toml  client.rs
qjazz-server/qjazz-pool/: Cargo.toml
qjazz-server/qjazz-rpc/: Cargo.toml  Makefile  build.rs  pyproject.toml
qjazz-server/tests/: Makefile  certs  config-map-single.toml  config-map.toml  config-rpc.toml  config.toml  monitor.py  monitor.toml
(+1264 files in other folders)
