[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qjazz-contrib"
description = "QJazz contrib utilities"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
]
dependencies = [
  'pydantic < 3.0',
  'pydantic-settings',
  'typing-extensions',
  'posix_ipc',
]
version = "0.3.1"

[project.optional-dependencies]
celery = [ "celery>=5.4", "redis>=5.0.8" ]

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.package-data]
qjazz_contrib = [ "core/manifest.json" ]

[tool.setuptools.packages.find]
exclude = [ "tests/*" ]
include = [
    "qjazz_contrib", 
    "qjazz_contrib.*",
    "qjazz_cache",
    "qjazz_cache.*",
    "qjazz_ogc",
    "qjazz_ogc.*",
]

#
# Ruff 
#

[tool.ruff]
extend = "../config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
"qjazz_contrib/core/qgis/qgis_init.py" = ["T201"]
"qjazz_contrib/core/config/_toml.py" = ["T201"]
 
