[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "qjazz-contrib"
description = "QJazz contrib utilities"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX",
]
dependencies = [
  'pydantic < 3.0',
  'pydantic-settings',
  'typing-extensions',
  'posix_ipc',
]
version = "0.4.0"

[project.optional-dependencies]
celery = [ "celery>=5.4", "redis>=5.0.8" ]
store = ["minio<7.2.16"]

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.uv.build-backend]
module-name = ["qjazz_core", "qjazz_ogc", "qjazz_cache", "qjazz_store"]
source-exclude = [
    "qjazz_core/qgis/qgis_binding.cpp",
]

#
# Ruff 
#

[tool.ruff]
extend = "../config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
"src/qjazz_core/qgis/qgis_init.py" = ["T201"]
"src/qjazz_core/config/_toml.py" = ["T201"]


#
# Coverage
#
[tool.coverage.run]
source =  [
    "src/qjazz_core",
    "src/qjazz_cache",
    "src/qjazz_ogc",
    "src/qjazz_store",
]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "if TYPE_CHECKING",
    '\(Protocol\):$',
    'assert_never',
]
