[project]
name = "qjazz"
description = "QJazz server suite"
version = "0.7.0"
requires-python = ">= 3.12"
license = "Apache-2.0 OR MIT" 

dependencies = [
    "qjazz-map>=0.1.3,<0.2",
    "qjazz-rpc>=0.1.2,<0.2",
    "qjazz-processes>=0.7.0,<0.8.0",
]

[tool.uv.sources]
qjazz-map = { workspace = true }
qjazz-rpc = { workspace = true }
qjazz-processes = { workspace = true }

