[project]
name = "qjazz"
description = "QJazz server suite"
version = "0.8.2"
requires-python = ">= 3.12"
license = "Apache-2.0 OR MIT" 

dependencies = [
    "qjazz-map==0.8.2",
    "qjazz-rpc==0.8.2",
    "qjazz-processes==0.8.2",
]

[tool.uv.sources]
qjazz-map = { workspace = true }
qjazz-rpc = { workspace = true }
qjazz-processes = { workspace = true }

