[package]
name = "qjazz-pool"
version = "0.1.0"
edition = "2021"
description = "QGIS worker pool"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
serde-pickle = "1.2"
serde_bytes = "0.11"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
bytes = "1.9"
tempfile = "3"
nix = { version = "0.29", features = ["fs", "signal", "process"] }
futures = "0.3"
tokio-util = { workspace = true }

[dependencies.tokio]
workspace = true
features = [
    "process",
    "io-util",
    "net",
    "rt",
    "time",
    "sync",
    "macros",
]

[dev-dependencies]
env_logger = { workspace = true }

