[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qjazz-processes"
description = "QJazz OGC processes "
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
]
dependencies = [
    "qjazz-contrib[celery]==0.1.0",
    "pydantic-extra-types",
    "click",
    "requests",
    "aiofiles",
    "ruamel.yaml",
]
version = "0.1.0"

[project.optional-dependencies]
server = ["aiohttp"]
minio = ["minio"]

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[project.scripts]
qjazz-processes = "qjazz_processes.__main__:main"
qjazz-printserver = "qjazz_printserver.__main__:main"

[tool.setuptools.packages.find]
exclude = [ "tests/*" ]
include = [
    "qjazz_processes", 
    "qjazz_processes.*",
    "qjazz_printserver",
    "qjazz_printserver.*",
]

#
# Ruff
#

[tool.ruff]
extend = "../config/ruff.toml"
extend-exclude = [
    "tests/plugins/",
    "tests/clienttests/",
] 

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
"qjazz_processes/tests/*" = ["T201"]
"qjazz_processes/server/_handlers/protos.py" = ["F401"]
"qjazz_processes/processing/prelude.py" = ["F401"]

