[build-system]
requires = ["uv_build>=0.9.2,<1.0.0"]
build-backend = "uv_build"

[project]
name = "qjazz-processes"
description = "QJazz OGC processes "
version = "0.8.2"
requires-python = ">= 3.12"
licence = "Apache-2.0 OR MIT"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "qjazz-contrib[celery, store]==0.8.2",
    "pydantic-extra-types",
    "click",
    "requests",
    "aiofiles",
    "ruamel.yaml",
]

[project.optional-dependencies]
server = ["aiohttp"]
mail = ["email-validator"]


[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[project.scripts]
qjazz-processes = "qjazz_processes.__main__:main"
qjazz-processing = "qjazz_processing.__main__:main"

[tool.uv.build-backend]
module-name = [ "qjazz_processes", "qjazz_processing"]

[tool.uv.sources]
qjazz-contrib = { workspace = true }

#
# Ruff
#

[tool.ruff]
extend = "../config/ruff.toml"
extend-exclude = [
    "tests/plugins/",
    "tests/clienttests/",
] 

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "S101"]
"src/qjazz_processes/tests/*" = ["T201", "S101"]
"src/qjazz_processes/server/_handlers/protos.py" = ["F401"]
"src/qjazz_processes/processing/prelude.py" = ["F401"]


#
# Coverage
#
[tool.coverage.run]
source =  [
    "src/qjazz_processes",
]
branch = true
relative_files = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "if TYPE_CHECKING",
    '\(Protocol\):$',
    'assert_never',
]
