[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-admin"
description = "Qgis gRCP admin client"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "grpcio",
    "grpcio-health-checking",
    "grpcio-tools",
    "py-qgis-contrib==1.0.0.dev0",
    "docker",
    "dnspython",
    "click",
    "jsondiff",
    "aiohttp",
]
version = "1.0.0.dev0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.packages.find]
include = [
    "py_qgis_admin", 
    "py_qgis_admin.*", 
]

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
