[metadata]
name = py-qgis-contrib

[flake8]
max-line-length=120
exclude = 
    __pycache__,

per-file-ignores=
    py_qgis_contrib/core/qgis/qgis_init.py:T201
    tests/*:T201

[isort]
multi_line_output = 3 
include_trailing_comma = True
use_parentheses = True
ensure_newline_before_comments = True
lines_between_types = 1 
# Fix isort when running in venv in qgis docker image
# with --system-site package
known_third_party=qgis
