[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-http"
description = "Qgis server http proxy for gRCP service"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "grpcio",
    "grpcio-health-checking",
    "grpcio-tools",
    "py-qgis-contrib==1.0.0.dev0",
    "py-qgis-worker==1.0.0.dev0",
    "tornado >= 6",
    "click",
]
version = "1.0.0.dev0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.packages.find]
include = [
    "py_qgis_http", 
    "py_qgis_http.*", 
]

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
