[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-metrics"
description = "Metrics handler for py-qgis-server2"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-contrib==1.0.0.dev0",
]
version = "1.0.0.dev0"

[project.entry-points.'3liz.org.metrics.handler.1']
amqp = 'py_qgis_metrics.handlers.amqp:register'

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
