[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-metrics"
description = "Metrics handler for py-qgis-server2"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-contrib==1.0.0.dev0",
    "py-qgis-http==1.0.0.dev0",
    "py-amqp-client>=2.0.0"
]
version = "1.0.0.dev0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.ruff]
extend = "../../config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
