[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-scripts"
description = "Qgis RCP scripts"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-worker==1.0.0.dev0",
]
version = "1.0.0.dev0"

[project.scripts]
qgis-server-rpc = "py_qgis_worker.cli:main"
qgis-server-monitor = "py_qgis_admin.cli:main"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
