[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-scripts"
description = "Qgis RCP scripts"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-worker==1.0.0.dev0",
    "py-qgis-admin==1.0.0.dev0",
]
version = "1.0.0.dev0"

[project.scripts]
qgis-server-rpc = "py_qgis_worker.cli:main"
qgis-server-cli = "py_qgis_worker.client.__main__:main"
qgis-server-admin = "py_qgis_admin.cli:main"
qgis-server-http = "py_qgis_http.cli:main"
qgis-processes = "py_qgis_processes.__main__:main"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
