[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-worker"
description = "Qgis Worker"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-contrib==1.0.0.dev0",
    "py-qgis-project-cache==1.0.0.dev0",
    "click",
    "grpcio",
]
version = "1.0.0.dev0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.packages.find]
include = [
    "py_qgis_worker", 
    "py_qgis_worker.*",
]
