[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-qgis-worker"
description = "Qgis Worker"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX",
]
dependencies = [
    "py-qgis-contrib==1.0.0.dev0",
    "py-qgis-cache==1.0.0.dev0",
    "grpcio",
    "grpcio-tools",
    "grpcio-health-checking",
    "click",
    "aiohttp",
]
version = "1.0.0.dev0"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.setuptools.packages.find]
include = [
    "py_qgis_worker", 
    "py_qgis_worker.*",
]

[tool.autopep8]
exclude = "*_pb2.py, *_pb2_grpc.py"


[tool.ruff]
extend = "../../config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
 
