[metadata]
name = py-qgis-worker

[flake8]
max-line-length=120
exclude = 
    __pycache__,
    _grpc,

per-file-ignores=
    py_qgis_worker/client/__main__.py:T201
    py_qgis_worker/cli.py:T201
    tests/*:T201

[isort]
multi_line_output = 3 
include_trailing_comma = True
use_parentheses = True
ensure_newline_before_comments = True
lines_between_types = 1 
# Fix isort when running in venv in qgis docker image
# with --system-site package
known_third_party=qgis
known_first_party=py_qgis_contrib,py_qgis_cache
skip=py_qgis_worker/_grpc
