[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qjazz-scripts"
description = "QJazz scripts and commands"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
]
dependencies = [
    "qjazz-server==0.1.0.dev0",
    "qjazz-processes==0.1.0.dev0",
]
version = "0.1.0.dev0"

[project.scripts]
qjazz-server-rpc = "qjazz_rpc.cli:main"
qjazz-server-cli = "qjazz_rpc.client.__main__:main"
qjazz-server-admin = "qjazz_admin.cli:main"
qjazz-server-http = "qjazz_http.cli:main"
qjazz-processes = "qjazz_processes.__main__:main"
qjazz-printserver = "qjazz_printserver.__main__:main"

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[tool.autopep8]
max_line = 120
in-place = true
recursive = true
exclude = "*_pb2.py, *_pb2_grpc.py"
