[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qjazz-server"
description = "Cloud ready Qgis server services"
requires-python = ">= 3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
]
dependencies = [
    "qjazz-contrib==0.3.0",
    "aiohttp",
    "grpcio",
    "grpcio-tools",
    "grpcio-health-checking",
    "click",
    "dnspython",
    "jsondiff",
    "ruamel.yaml",
    "msgpack",
]
version = "0.3.0"

[project.optional-dependencies]
amqp = ["py-amqp-client>=2.0.0"]
minio = ['minio']

[[project.authors]]
name = "David Marteau"
email = "dmarteau@3liz.org"

[project.scripts]
qjazz-server-admin = "qjazz_admin.cli:main"
qjazz-config = "qjazz_rpc.cli:main"
qjazz-rpc-client = "qjazz_rpc.client:cli_commands"

[tool.setuptools.packages.find]
exclude = [ "tests/*" ]
include = [
    "qjazz_rpc",
    "qjazz_rpc.*",
    "qjazz_map",
    "qjazz_map.*",
    "qjazz_admin",
    "qjazz_admin.*",
]

[tool.ruff]
extend = "../../config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]
"qjazz_http/config.py" = ["T201"]

[tool.vulture]
exclude = ["_grpc/"]



