[package]
name = "qjazz-map"
version = "0.1.0"
edition = "2021"
description = "QJazz Map Server"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "qjazz-map-bin"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
tonic = { version = "0.12", features = ["tls"] }
tonic-health = "0.12"
clap = { version = "4", features=["derive"] }
log = { workspace = true,  features = ["serde"] }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
ginepro = "0.8.2"
config = { workspace = true, features = ["toml"] }
subst = "0.3"
env_logger = { workspace = true }
prost = "0.13"
futures = "0.3"
num_cpus = "1"
regex = "1"
rustls = "0.23"
rustls-pki-types = "1"
serde_urlencoded = "0.7"
actix-cors = "0.7"
mime = "0.3"
percent-encoding = "2"

[build-dependencies]
tonic-build = "0.12"
