[package]
name = "qjazz-map"
version = "0.1.1"
edition = "2024"
description = "QJazz Map Server"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "qjazz-map-bin"
path = "src/main.rs"

[dependencies]
qjazz-mon = { version = "~0.1", optional = true }
actix-web = { version = "4", features = ["rustls-0_23"] }
tonic = { workspace = true }
tonic-health = { workspace = true }
prost = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = { workspace = true,  features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
ginepro = "0.9"
config = { workspace = true, features = ["toml"] }
subst = "0.3"
env_logger = { workspace = true }
futures = "0.3"
num_cpus = "1"
regex = "1"
rustls = "0.23"
rustls-pki-types = "1"
serde_urlencoded = "0.7"
actix-cors = "0.7"
mime = "0.3"
percent-encoding = "2"
bitflags = "2"

[features]
monitor = ["qjazz-mon"]

[build-dependencies]
tonic-build = "0.13"
