[package]
name = "qjazz-pool"
version = "0.1.1"
edition = "2024"
description = "QGIS worker pool"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
tokio-util = { workspace = true }
tempfile = "3"
futures = "0.3"
bitflags = "2"
parking_lot = "0.12"

[dependencies.tokio]
workspace = true
features = [
    "process",
    "io-util",
    "net",
    "rt",
    "time",
    "sync",
    "macros",
]

[dev-dependencies]
env_logger = { workspace = true }

