[package]
name = "qjazz-rpc"
version = "0.1.1"
edition = "2024"
keywords.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[[bin]]
name = "qjazz-rpc-bin"
path = "src/main.rs"

[dependencies]
qjazz-pool = "~0.1"
qjazz-mon = { version = "~0.1", optional = true }
tonic = { version = "0.12", features= ["tls"] }
tonic-health = "0.12"
prost = "0.13"
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
tokio-util = { workspace = true }
log = { workspace = true,  features = ["serde"] }
env_logger = { workspace = true }
config = { workspace = true, features = ["serde_json", "toml"] }
clap = { version = "4", features=["derive"] }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }
subst = "0.3"
signal-hook = "0.3"
procfs = "0.17"
nix = { workspace = true }
sysconf = "0.3"

[features]
default = ["monitor"]
monitor = ["qjazz-mon"]


[build-dependencies]
tonic-build = "0.12"


