[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "qjazz_rpc"
description = "Cloud ready Qgis server services"
authors = [
    { name = "David Marteau", email = "dmarteau@3liz.org" },
]
requires-python = ">= 3.12"
licence = "Apache-2.0 OR MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "qjazz-contrib>=0.8.0,<0.9",
    "aiohttp",
    "grpcio",
    "grpcio-tools",
    "grpcio-health-checking",
    "click",
    "dnspython",
    "jsondiff",
    "ruamel.yaml",
    "msgpack",
]
dynamic = ["version"]

[project.optional-dependencies]
minio = ["minio<7.2.16"]

#[project.scripts]
#qjazz-config = "qjazz_rpc.cli:cli"
#qjazz-rpc-client = "qjazz_rpc.client:cli"

[tool.maturin]
bindings = "bin"
python-source = "python"

[tool.uv.sources]
qjazz-contrib = { workspace = true }


